2009-01-23 Roman
- !!!:/SYS: Loading from individual DB support is added. Used for loading from connected now DB. Function TSYS::selDB() for this is added.
- FIX:/SYS: Clearing thread's timer's structure before creation is added.
- /SYS: Debug messages is added for thread's timers. TID and thread id is showing.


2009-01-21 Roman
- !:/Special/FLibSYS: Microseconds time parameter is added to user's function tmTime().
    Geting microseconds is more resource dependent function then for get microseconds used preset it attribute to no negative value.
- !:/UI/QTCfg: Identical tabs selection saving on item changing is added.
- FIX:/UI/WebCfgD: DB load and save actions updating after save DB action activation is fixed.


2009-01-16 Roman
- !!:/UI/QTCfg: Status update for remote stations is added.
- /UI/WebCfgD: Connection error's code changed to 10.


2009-01-15 Roman
- !:/SYS: Function for extracting space symbols from begin and end of string is added, TSYS::strNoSpace().
    Function TSYS::strEmpty() is deleted and replaced by TSYS::strNoSpace() everywhere.
- !!!:/Protocol/HTTP: Keep-Alive from HTTP protocol support is added. Critical for Opera.
- !!!:/UI/QTStarter: I18NTranslator QT traslator is added for transporting QT's translation requests to gettext I18N engine.
    QT's self dialogs' messages is translated to Russian and Ukrainian.
- /DemoDB: English translation of DB is updated for some translation fix.


2009-01-14 Roman
- FIX:/SYS: Config files for Transport.Sockets format is fixed. No work connection by default config.


2009-01-12 Roman OpenSCADA 0.6.3
- !!!!:/DemoDB: Translation to English is added. DB files separated to English and Russian.
- !!:/SYS: Add release 0.6.3 anounce documents.
- !!:/SYS: Updated FAQ, TODO and README documents.
- !!:/SYS: RPM build spec file is updated for new demo DB files configuration support.
- FIX:/DB: DB system table cache limit process is fixed.
- FIX:/UI/QTCfg: Wrap mode for text field is fixed.


2009-01-09 Roman