@@ -84,7 +84,7 @@
   <a id='actCut' class='inactive' title='###Cut item###'><img src='/WebCfgD/img_editcut?filtr=gray' /></a>
   <a id='actPaste' class='inactive' title='###Paste item###'><img src='/WebCfgD/img_editpaste?filtr=gray' /></a>
   <img src='/WebCfgD/img_line' />
-  <a id='actUpdate' class='active' title='###Reload item###'><img src='/WebCfgD/img_reload?filtr=none' /></a>
+  <a id='actUpdate' class='active' title='###Reload item and tree###'><img src='/WebCfgD/img_reload?filtr=none' /></a>
   <a id='actStart' class='active' title='###Start periodic update###'><img src='/WebCfgD/img_start?filtr=none' /></a>
   <a id='actStop' class='inactive' title='###Stop periodic update###'><img src='/WebCfgD/img_stop?filtr=gray' /></a>
   <img src='/WebCfgD/img_line' />
