@@ -2,6 +2,7 @@
 - !!!:/SYS: Loading from individual DB support is added. Used for loading from connected now DB. Function TSYS::selDB() for this is added.
 - FIX:/SYS: Clearing thread's timer's structure before creation is added.
 - /SYS: Debug messages is added for thread's timers. TID and thread id is showing.
+- /UI/WebCfgD: The action tree update is mixed with the action item update.
 
 
 2009-01-21 Roman
